# lyra-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compileShader.bat  compileShader.sh
ContentManager/: CMakeLists.txt
ContentManager/cmake/: lyra-config.cmake  sdl2-config.cmake
ContentManager/src/: main.cpp  menus.cpp  menus.h
ImGuiBuild/: CMakeLists.txt
LyraAssets/: CMakeLists.txt
LyraAssets/data/: Assets.lyproj
LyraAssets/data/fonts/: LICENSE.txt
LyraAssets/src/: AssimpFileSystem.h  ContentManager.cpp  ContentManager.h  GuiElements.cpp  GuiElements.h  SDLImGuiRenderer.cpp  SDLImGuiRenderer.h  logger.cpp  logger.h  main.cpp
LyraEngine/: CMakeLists.txt
LyraEngine/cmake/: glm-config.cmake  imgui-config.cmake  noud-config.cmake  sdl2-config.cmake  stb-config.cmake  tol-config.cmake  vma-config.cmake
LyraEngine/include/: lyra.h
LyraEngine/include/Application/: Application.h
LyraEngine/include/Common/: Allocator.h  Allocators.h  Array.h  BasicRenderer.h  Benchmark.h  Common.h  Config.h  Dynarray.h  FileSystem.h  ForwardList.h  ForwardListNode.h  FunctionPointer.h  Hash.h  Iterator.h  IteratorBase.h  Iterators.h  JSON.h  Logger.h  Manager.h  Node.h  Queue.h  RAIIContainers.h  RenderSystem.h  ResourcePool.h  Settings.h  SharedPointer.h  SmartPointer.h  SparseMap.h  SparseSet.h  TypeID.h  UniquePointer.h  UnorderedSparseMap.h  UnorderedSparseSet.h  Utility.h  Vector.h
LyraEngine/include/Components/: Camera.h  Colliders.h  Cubemap.h  Light.h  MeshRenderer.h  Rigidbody.h  Transform.h
LyraEngine/include/ECS/: Component.h  ECS.h  Entity.h  System.h
LyraEngine/include/ECS/Components/: Camera.h  Colliders.h  Cubemap.h  MeshRenderer.h  Rigidbody.h  Transform.h
LyraEngine/include/ECS/World/: Archetype.h  Managers.h  World.h
LyraEngine/include/Entity/: Component.h  ECS.h  Entity.h  System.h
LyraEngine/include/Entity/Components/: Camera.h  Colliders.h  Cubemap.h  MeshRenderer.h  Rigidbody.h  Transform.h
LyraEngine/include/EntitySystem/: Camera.h  Colliders.h  Cubemap.h  Entity.h  Light.h  Mesh.h  MeshRenderer.h  Rigidbody.h  Script.h  Transform.h
LyraEngine/include/Graphics/: GUIRenderer.h  GraphicsPipeline.h  ImGuiRenderer.h  Material.h  Mesh.h  RenderSystem.h  Renderer.h  SDLWindow.h  Texture.h  VulkanRenderSystem.h  Window.h
LyraEngine/include/Graphics/VulkanImpl/: CommandBuffer.h  DescriptorSystem.h  Device.h  Frame.h  GPUBuffer.h  GPUMemory.h  Image.h  PipelineBase.h  Shader.h  Window.h
LyraEngine/include/Input/: Input.h  InputEnums.h  InputSystem.h
LyraEngine/include/Json/: Json.h
LyraEngine/include/Lyra/: Lyra.h
LyraEngine/include/Math/: ComputePipeline.h  LyraMath.h
LyraEngine/include/Resource/: LoadFile.h  LoadImage.h  LoadMaterial.h  LoadMaterialFile.h  LoadMesh.h  LoadMeshFile.h  LoadModel.h  LoadResources.h  LoadTexture.h  LoadTextureFile.h  Material.h  Mesh.h  ResourceManager.h  ResourceSystem.h  Shader.h  Texture.h
LyraEngine/include/components/graphics/: camera.h
LyraEngine/include/core/: allocators.h  application.h  array.h  basic_pool.h  benchmark.h  context.h  core.h  decl.h  defines.h  dynarray.h  function_pointer.h  iterator_base.h  logger.h  node.h  queue.h  queue_types.h  resource_pool.h  settings.h  singleton.h  smart_pointer.h  util.h
LyraEngine/include/core/rendering/: asset_manager.h  assets.h  context.h  graphics_pipeline.h  gui_context.h  (+6 more)
LyraEngine/include/graphics/: asset_manager.h  graphics_pipeline.h  texture.h
LyraEngine/include/init/: init_SDL.h
LyraEngine/include/input/: input.h  input_enums.h
LyraEngine/include/math/: math.h  transform.h
LyraEngine/include/nodes/: node.h  script.h  spatial.h
LyraEngine/include/rendering/: assets.h  graphics_pipeline.h  gui_renderer.h  material.h  render_system.h  renderer.h  texture.h  window.h
LyraEngine/include/res/: loaders.h
LyraEngine/include/something/: something.h
LyraEngine/src/: def.cpp  lyra.cpp  lyra.h
LyraEngine/src/Application/: Application.cpp
LyraEngine/src/Common/: Allocators.cpp  Benchmark.cpp  FileSystem.cpp  Logger.cpp  Settings.cpp
LyraEngine/src/Components/: Camera.cpp  Cubemap.cpp  MeshRenderer.cpp
LyraEngine/src/ECS/: ECS.cpp
LyraEngine/src/Entity/: ECS.cpp
LyraEngine/src/EntitySystem/: Camera.cpp  Colliders.cpp  Cubemap.cpp  Entity.cpp  Mesh.cpp  MeshRenderer.cpp
LyraEngine/src/Graphics/: GUIRenderer.cpp  GraphicsPipeline.cpp  ImGuiRenderer.cpp  Material.cpp  RenderSystem.cpp  Renderer.cpp  SDLWindow.cpp  Texture.cpp  VulkanRenderSystem.cpp  Window.cpp
LyraEngine/src/Init/: SingleHeaderInit.cpp
LyraEngine/src/Input/: Input.cpp  InputSystem.cpp
LyraEngine/src/Math/: ComputePipeline.cpp  LyraMath.cpp
LyraEngine/src/Resource/: LoadFIle.cpp  LoadImage.cpp  LoadMaterial.cpp  LoadMaterialFile.cpp  LoadMesh.cpp  LoadMeshFile.cpp  LoadModel.cpp  LoadResources.cpp  LoadTexture.cpp  LoadTextureFile.cpp  Material.cpp  ResourceManager.cpp  ResourceSystem.cpp  Shader.cpp  Texture.cpp
LyraEngine/src/components/: component_manager.h  gameObj.cpp  gameObj.h
LyraEngine/src/core/: allocators.cpp  application.cpp  benchmark.inl  core.cpp  core.h  def.cpp  defines.h  logger.cpp  logger.h  queue_types.h  settings.cpp  settings.h
LyraEngine/src/graphics/: asset_manager.cpp  asset_manager.h  graphics_pipeline.cpp  graphics_pipeline.h  material.h  material_manager.h  renderer.cpp  renderer.h  texture.cpp  texture.h
LyraEngine/src/init/: init_SDL.cpp  single_header_init.cpp
LyraEngine/src/input/: input.cpp
LyraEngine/src/math/: math.cpp  math.h  transform.cpp
LyraEngine/src/nodes/: components.cpp  nodes.cpp  spatial.cpp
LyraEngine/src/rendering/: assets.cpp  graphics_pipeline.cpp  gui_renderer.cpp  material.cpp  render_system.cpp  renderer.cpp  texture.cpp  window.cpp
LyraEngine/src/res/: loaders.cpp
LyraGui/: CMakeLists.txt
LyraGui/src/: image.cpp  image.h  main.cpp  menus.cpp  menus.h
Tests/Compute/: CMakeLists.txt
Tests/Compute/src/: main.cpp
Tests/Containers/: CMakeLists.txt
Tests/Containers/src/: main.cpp  test.json
Tests/Engine/: CMakeLists.txt
Tests/Engine/src/: main.cpp  menus.h
(+379 files in other folders)
